--- a/components/sidebar.html
+++ b/components/sidebar.html
@@ -1,28 +1,16 @@
 <section class="sidebar">
   <ul class="sidebar__list">
     <li class="sidebar__selection">
-      <i class="sidebar__icon fa-solid fa-gauge"></i
-      ><span class="sidebar__text">Dashboard</span>
+      <i class="sidebar__icon fa-solid fa-map"></i
+      ><span class="sidebar__text">Map</span>
     </li>
     <li class="sidebar__selection">
-      <i class="sidebar__icon fa-solid fa-user" style="color: #ccc"></i
-      ><span class="sidebar__text">Users</span>
+      <i class="sidebar__icon fa-solid fa-cloud"></i
+      ><span class="sidebar__text">Weather</span>
     </li>
     <li class="sidebar__selection">
-      <i class="sidebar__icon fa-solid fa-sitemap"></i
-      ><span class="sidebar__text">Site</span>
-    </li>
-    <li class="sidebar__selection">
-      <i class="sidebar__icon fa-solid fa-dollar-sign"></i
-      ><span class="sidebar__text">Sales</span>
-    </li>
-    <li class="sidebar__selection">
-      <i class="sidebar__icon fa-solid fa-envelope"></i
-      ><span class="sidebar__text">Emails</span>
-    </li>
-    <li class="sidebar__selection">
-      <i class="sidebar__icon fa-solid fa-gear"></i
-      ><span class="sidebar__text">Settings</span>
+      <i class="sidebar__icon fa-solid fa-trophy"></i
+      ><span class="sidebar__text">Records</span>
     </li>
   </ul>
 </section>
