making progress on collapsibles

--- a/components/header.html
+++ b/components/header.html
@@ -1,5 +1,5 @@
-<header>
-  <h1>
+<header class="header">
+  <h1 class="header__content">
     <i class="fa-solid fa-bicycle"></i>
     Divvy Dashboard
   </h1>
