--- a/css/styles.css
+++ b/css/styles.css
@@ -83,9 +83,6 @@ body {
 .collapsible__header {
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
-    align-items: left;
-    position: relative;
     padding: 5px 10px 0px 10px;
 }
 
@@ -101,15 +98,6 @@ body {
     margin-left: 60%;
 }
 
-.collapsible__content {
-    max-height: 0;
-    overflow: hidden;
-    opacity: 0;
-    transition: all .3s;
-    font-size: 1.6rem;
-    margin-top: 0rem;
-}
-
 .collapsible--expanded .collapsible__chevron {
     transform: rotate(0);
 
@@ -123,16 +111,27 @@ body {
 .collapsible__selection {
     font-size: 1.2rem; /* Adjust font size as needed */
     display: flex; /* Add flex properties for layout */
-    align-items: center;
     border-bottom: 1px solid #000;
     padding-bottom: 5px;
 }
 
 .collapsible__content {
     list-style: none; /* Remove bullet points */
+    padding: 0;
     position: absolute; /* Add absolute positioning to remove from normal flow */
     z-index: 1; /* Place the dropdown above other content */
     background-color: #fff; /* Add a background color to the dropdown */
     box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2); /* Optional shadow for dropdown */
-    bottom: 87%;
-  }
+    top: 40px;
+    left: 2%;
+    max-height: 0;
+    overflow: hidden;
+    opacity: 0;
+    transition: all .3s;
+    font-size: 1.2rem;
+    min-width: 100px;
+}
+
+.collapsible__list {
+    padding: 0px 0px 0px 5px;
+}
