--- a/components/collapsibles.html
+++ b/components/collapsibles.html
@@ -1,23 +1,18 @@
-<div class="collapsible collapsible--expanded">
-  <header class="collapsible__header">
-    <h2 class="collapsible__heading">Item 1</h2>
-    <svg class="icon icon--white collapsible__chevron">
-      <use xlink:href="images/sprite.svg#chevron"></use>
-    </svg>
-  </header>
-  <div class="collapsible__content">
-    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Placeat, pariatur.
-  </div>
-</div>
-<div class="collapsible collapsible--expanded">
-  <header class="collapsible__header">
-    <h2 class="collapsible__heading">Item 1</h2>
-    <svg class="icon icon--white collapsible__chevron">
-      <use xlink:href="images/sprite.svg#chevron"></use>
-    </svg>
-  </header>
-  <div class="collapsible__content">
-    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Placeat, pariatur.
+<div class="collapsible__container">
+  <div class="collapsible collapsible--expanded">
+    <div class="collapsible__header">
+      <p class="collapsible__heading">Location Level</p>
+      <p class="collapsible__selection">
+        Option 1
+        <i class="fa-solid fa-chevron-up collapsible__chevron"></i>
+      </p>
+    </div>
+    <ul class="collapsible__content">
+      <li class="collapsible__list">Option 1</li>
+      <li class="collapsible__list">Option 2</li>
+      <li class="collapsible__list">Option 3</li>
+      <li class="collapsible__list">Option 1</li>
+    </ul>
   </div>
 </div>
 <script src="js/main.js"></script>
