--- a/css/styles.css
+++ b/css/styles.css
@@ -72,35 +72,37 @@ body {
 
 /* Collapsible */
 .collapsible__container {
+    position: relative; 
     border: 1px solid #ccc;
     box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2);
     border-radius: 10px;
     display: inline-block;
-    min-width: 120px;
-
+    min-width: 160px;
+    position: absolute;
+    top: 6.5rem; /* Adjust as needed */
+    left: 7.5rem;
   }
 
 .collapsible__header {
     display: flex;
     flex-direction: column;
     padding: 5px 10px 0px 10px;
+    white-space: nowrap;
 }
 
 .collapsible__heading {
-    margin-top: 0;
+    margin: 0;
     font-size: 1.1rem;
-    margin-bottom: 0rem;
 }
 
 .collapsible__chevron {
     transition: transform 0.3s;
     transform: rotate(180deg);
-    margin-left: 60%;
+    margin-left: 55%;
 }
 
 .collapsible--expanded .collapsible__chevron {
     transform: rotate(0);
-
 }
 
 .collapsible--expanded .collapsible__content {
@@ -109,27 +111,27 @@ body {
 }
 
 .collapsible__selection {
-    font-size: 1.2rem; /* Adjust font size as needed */
-    display: flex; /* Add flex properties for layout */
+    font-size: 1.2rem;
+    display: flex;
     border-bottom: 1px solid #000;
     padding-bottom: 5px;
 }
 
 .collapsible__content {
-    list-style: none; /* Remove bullet points */
+    list-style: none;
     padding: 0;
-    position: absolute; /* Add absolute positioning to remove from normal flow */
-    z-index: 1; /* Place the dropdown above other content */
-    background-color: #fff; /* Add a background color to the dropdown */
-    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2); /* Optional shadow for dropdown */
+    position: absolute;
+    z-index: 1;
+    background-color: #fff;
+    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2);
     top: 40px;
-    left: 2%;
+    left: 8%;
     max-height: 0;
     overflow: hidden;
     opacity: 0;
     transition: all .3s;
     font-size: 1.2rem;
-    min-width: 100px;
+    min-width: 137px;
 }
 
 .collapsible__list {
