--- a/components/sidebar.html
+++ b/components/sidebar.html
@@ -1,16 +1,18 @@
-<section class="sidebar">
-  <ul class="sidebar__list">
-    <li class="sidebar__selection">
-      <i class="sidebar__icon fa-solid fa-map"></i
-      ><span class="sidebar__text">Map</span>
-    </li>
-    <li class="sidebar__selection">
-      <i class="sidebar__icon fa-solid fa-cloud"></i
-      ><span class="sidebar__text">Weather</span>
-    </li>
-    <li class="sidebar__selection">
-      <i class="sidebar__icon fa-solid fa-trophy"></i
-      ><span class="sidebar__text">Records</span>
-    </li>
-  </ul>
-</section>
+<div class="collapsible__container">
+  <div class="collapsible collapsible--expanded">
+    <div class="collapsible__header">
+      <p class="collapsible__heading">Location Level</p>
+      <p class="collapsible__selection">
+        Option 1
+        <i class="fa-solid fa-chevron-up collapsible__chevron"></i>
+      </p>
+    </div>
+    <ul class="collapsible__content">
+      <li class="collapsible__list">Option 1</li>
+      <li class="collapsible__list">Option 2</li>
+      <li class="collapsible__list">Option 3</li>
+      <li class="collapsible__list">Option 1</li>
+    </ul>
+  </div>
+</div>
+<script src="js/main.js"></script>
