--- a/css/styles.css
+++ b/css/styles.css
@@ -29,19 +29,24 @@ body {
 
 /* Sidebar */
 .sidebar {
+    position: absolute;
     background-color: #66c0ec;
     display: flex;
     flex-direction: row;
     height: 100vh;
     width: 5rem;
-    transition: .5s;
+    transition: width .5s;
     overflow: hidden;
     margin-top: -.5rem;
+    z-index: 2;
 }
 
 .sidebar:hover {
+    position: absolute;
     width: 15rem;
+    z-index: 2; /* Bring sidebar to the front when expanded */
 }
+
 
 .sidebar__list {
     padding:0;
@@ -53,13 +58,13 @@ body {
     padding: 1.6rem 0;
     font-size: 1.4rem;
     color: black;
-    transition: .5s;
+    transition: width .5s;
     font-weight: 600;
 }
 
 .sidebar__selection:hover {
     background-color: lightslategray;
-    width: 15rem;
+    min-width: 15rem;
 }
 
 .sidebar__icon {
@@ -72,7 +77,7 @@ body {
 
 /* Collapsible */
 .collapsible__container {
-    position: relative; 
+    position: absolute; 
     border: 1px solid #ccc;
     box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2);
     border-radius: 10px;
@@ -108,6 +113,7 @@ body {
 .collapsible--expanded .collapsible__content {
     max-height: 100vh;
     opacity: 1;
+    pointer-events: auto;
 }
 
 .collapsible__selection {
@@ -115,13 +121,13 @@ body {
     display: flex;
     border-bottom: 1px solid #000;
     padding-bottom: 5px;
+    pointer-events: auto;
 }
 
 .collapsible__content {
     list-style: none;
     padding: 0;
     position: absolute;
-    z-index: 1;
     background-color: #fff;
     box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2);
     top: 40px;
@@ -132,6 +138,7 @@ body {
     transition: all .3s;
     font-size: 1.2rem;
     min-width: 137px;
+    z-index: 1;
 }
 
 .collapsible__list {
