--- a/sandbox.css
+++ b/sandbox.css
@@ -1,3 +1,10 @@
+/* Reset some default styles */
+html {
+    font-size: 62.5%;
+    margin: 0;
+    padding: 0;
+}
+
 /* Collapsible */
 .collapsible__container {
     position: relative;
@@ -5,8 +12,8 @@
     box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2);
     border-radius: 10px;
     display: inline-flex;
-    min-width: 250px;
-    max-height: 85px;
+    min-width: 25rem;
+    max-height: 6.5rem;
   }
 
 .collapsible__header {
@@ -18,7 +25,7 @@
 
 .collapsible__heading {
     margin: 0;
-    font-size: 1.1rem;
+    font-size: 1.2rem;
 }
 
 .collapsible__chevron {
@@ -32,7 +39,7 @@
 }
 
 .collapsible__selection {
-    font-size: 1.2rem;
+    font-size: 1.4rem;
     display: flex;
     border-bottom: 1px solid #000;
     padding-bottom: 5px;
@@ -49,7 +56,7 @@
     box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2);
     opacity: 0;
     transition: all .3s;
-    font-size: 1.2rem;
+    font-size: 1.4rem;
     border-radius: 5px;
     margin: -1rem 1rem 0rem 1rem;
 }
