--- a/css/styles.css
+++ b/css/styles.css
@@ -174,12 +174,30 @@ html {
 .map__container {
     width: 65vh;
     height: 85vh;
-    background-color: grey;
+    background-color: #fff;
+    border: 1px solid #ccc;
+    box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.5);
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+    border-radius: 10px;
 }
 
-.map__layout {
-    width: 90%;
-    height: 90%;
-    z-index: 1;
+.map__title {
+    margin-top: 10px;
+    margin-right: 270px;
+    font-size: 1.5rem; 
+    font-weight: bold;
 }
+
+.map {
+    width: 95%;
+    height: 93%;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+}
+
+
+
 
