--- a/components/map.html
+++ b/components/map.html
@@ -1,4 +1,4 @@
-<section>
+<section class="map__block">
   <div class="map__container">
     <h2 class="map__title">Bike Station Map for the City of Chicago</h2>
     <div id="map" class="map"></div>
