--- a/css/styles.css
+++ b/css/styles.css
@@ -9,6 +9,7 @@ body {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     margin: 0;
     padding: 0;
+    background-color: #f5f5f5;
 }
 
 /* Header */
@@ -97,8 +98,9 @@ html {
     box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2);
     border-radius: 10px;
     display: inline-flex;
-    min-width: 25rem;
+    max-width: 20rem;
     max-height: 6.5rem;
+    background-color: #fff;
   }
 
 .collapsible__header {
@@ -129,7 +131,8 @@ html {
     border-bottom: 1px solid #000;
     padding-bottom: 5px;
     pointer-events: auto;
-    min-width: 250px;
+    max-width: 20rem;
+    min-width: 15rem;
     justify-content: space-between;
 }
 
@@ -171,8 +174,15 @@ html {
 
 /* Map */
 
+.map__block {
+    margin: 10px 60px 10px 60px;
+    display: flex;
+    justify-content: flex-start;
+  
+}
+
 .map__container {
-    width: 65vh;
+    width: 85vh;
     height: 85vh;
     background-color: #fff;
     border: 1px solid #ccc;
@@ -186,16 +196,18 @@ html {
 
 .map__title {
     margin-top: 10px;
-    margin-right: 270px;
+    margin-right: 280px;
     font-size: 1.5rem; 
     font-weight: bold;
+    min-width: 350px;
 }
 
 .map {
     width: 95%;
-    height: 93%;
+    height: 92%;
     border: 1px solid #ccc;
     border-radius: 5px;
+    z-index: 0;
 }
 
 
