--- a/css/styles.css
+++ b/css/styles.css
@@ -137,7 +137,7 @@ html {
 }
 
 .collapsible--expanded .collapsible__content {
-    max-height: 100vh;
+    max-height: 40vh;
     opacity: 1;
     pointer-events: auto;
     z-index: 1;
@@ -154,6 +154,7 @@ html {
     font-size: 1.4rem;
     border-radius: 5px;
     margin: -1rem 1rem 0rem 1rem;
+    overflow-y: auto;
 }
 
 .collapsible__list {
