--- a/vite-project/styles.css
+++ b/vite-project/styles.css
@@ -102,38 +102,51 @@ html {
 
 /* Conent Block */
 
-.content__block {
+.main__block {
     position: absolute;
-    top: 5.5rem; /* Set the top position below the header */
-    left: 0rem; /* Adjust the left position for spacing */
+    top: 6.5rem; /* Set the top position below the header */
+    left: 6.5rem; /* Adjust the left position for spacing */
     right: 0;
     bottom: 0;
-    display: flex;
-    flex-direction: row;
     overflow-y: scroll;
     height: calc(100vh - 6.5rem); /* Set a fixed height based on viewport height */
-    max-width: 100%;
 }
 
-.left {
-    padding: 0px; /* Add padding as needed for the right section */
-}
-
-.right {
+.content__block {
     display: flex;
-    padding: 0px;
-    margin: 10px 10px 10px 10px;
+    gap: 20px;
+    margin: 15px 0px 15px 0px;
+
+}
+
+/* Table */
+.table__container {
+    width: 85vh;
+    height: 85vh;
+    background-color: #fff;
+    border: 1px solid #ccc;
+    box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.5);
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
     align-items: center;
+    border-radius: 10px;
+}
+
+.table__title {
+    margin-top: 10px;
+    font-size: 1.5rem; 
+    font-weight: bold;
+    color: #000;
 }
 
 /* Collapsible */
 .collapsible__block {
-    margin: 10px 20px 10px 60px;
     display: flex;
-    justify-content: flex-start;
-    gap: 20px;  
-    max-width: 650px;
+    width: 100%;
+    gap: 20px; 
 }
+
 
 .collapsible__container {
     position: relative;
@@ -230,13 +243,6 @@ html {
 
 /* Map */
 
-.map__block {
-    flex: 1;
-    margin: 10px 20px 10px 60px;
-    display: flex;
-    justify-content: flex-start;
-  
-}
 
 .map__container {
     width: 85vh;
