--- a/css/styles.css
+++ b/css/styles.css
@@ -14,10 +14,15 @@ body {
 
 /* Header */
 .header {
-    position: relative;
-    width: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
     background-color: #66c0ec;
+    width: 100%;
     height: 5.5rem;
+    display: flex;
+    align-items: center;
 }
 
 .header__content {
@@ -26,15 +31,17 @@ body {
     font-size: 3.5rem;
     margin: 0;
     margin-left: .5rem;
+    color: #000;
 }
 
 /* Sidebar */
 .sidebar {
-    position: absolute;
+    position: fixed;
     background-color: #66c0ec;
     display: flex;
     flex-direction: row;
-    height: 100vh;
+    height: calc(100vh - 5.5rem);
+    top: 5.5rem; /* Position below the header */
     width: 5rem;
     transition: width .5s;
     overflow: hidden;
@@ -93,25 +100,64 @@ html {
     padding: 0;
 }
 
+/* Conent Block */
+
+.main__block {
+    position: absolute;
+    top: 6.5rem; /* Set the top position below the header */
+    left: 6.5rem; /* Adjust the left position for spacing */
+    right: 0;
+    bottom: 0;
+    overflow-y: scroll;
+    height: calc(100vh - 6.5rem); /* Set a fixed height based on viewport height */
+}
+
+.content__block {
+    display: flex;
+    gap: 20px;
+    margin: 15px 0px 15px 0px;
+
+}
+
+/* Table */
+.table__container {
+    width: 85vh;
+    height: 85vh;
+    background-color: #fff;
+    border: 1px solid #ccc;
+    box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.5);
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+    border-radius: 10px;
+}
+
+.table__title {
+    margin-top: 10px;
+    font-size: 1.5rem; 
+    font-weight: bold;
+    color: #000;
+}
+
 /* Collapsible */
 .collapsible__block {
-    margin: 10px 60px 10px 60px;
     display: flex;
-  justify-content: flex-start;
-  gap: 20px;
-  
+    width: 100%;
+    gap: 20px; 
 }
+
 
 .collapsible__container {
     position: relative;
     border: 1px solid #ccc;
     box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2);
     border-radius: 10px;
-    display: inline-flex;
+    display: flex; /* Use flexbox */
     max-width: 20rem;
-    max-height: 6.5rem;
+    max-height: 7.5rem;
     background-color: #fff;
-  }
+}
 
 .collapsible__header {
     display: flex;
@@ -123,12 +169,12 @@ html {
 .collapsible__heading {
     margin: 0;
     font-size: 1.2rem;
+    color: #000;
 }
 
 .collapsible__chevron {
     transition: transform 0.3s;
     transform: rotate(180deg);
-
 }
 
 .collapsible--expanded .collapsible__chevron {
@@ -138,12 +184,23 @@ html {
 .collapsible__selection {
     font-size: 1.4rem;
     display: flex;
-    border-bottom: 1px solid #000;
-    padding-bottom: 5px;
+    justify-content: space-between;
+    align-items: center;
     pointer-events: auto;
     max-width: 20rem;
     min-width: 15rem;
-    justify-content: space-between;
+    color: #000;
+}
+
+/* Create and style the line */
+.collapsible__selection::before {
+    content: "";
+    position: absolute;
+    bottom: 10px;
+    left: 15px;
+    right: 15px;
+    height: 1px; /* Adjust the height of the line as needed */
+    background-color: #000; /* Line color */
 }
 
 .collapsible--expanded .collapsible__content {
@@ -151,6 +208,7 @@ html {
     opacity: 1;
     pointer-events: auto;
     z-index: 1;
+    color: #000;
 }
 
 .collapsible__content {
@@ -185,12 +243,6 @@ html {
 
 /* Map */
 
-.map__block {
-    margin: 10px 60px 10px 60px;
-    display: flex;
-    justify-content: flex-start;
-  
-}
 
 .map__container {
     width: 85vh;
@@ -210,6 +262,7 @@ html {
     font-size: 1.5rem; 
     font-weight: bold;
     min-width: 350px;
+    color: #000;
 }
 
 .map {
