--- a/css/styles.css
+++ b/css/styles.css
@@ -221,7 +221,7 @@ html {
     transition: all .3s;
     font-size: 1.4rem;
     border-radius: 5px;
-    margin: -1rem 1rem 0rem 1rem;
+    margin: .5rem 1rem 0rem 1rem;
     overflow-y: auto;
 }
 
@@ -275,19 +275,53 @@ html {
 
 /* Weather Charts */
 
+
 .chart__container {
+    width: 75vh;
+    height: 45vh;
+    background-color: #fff;
+    border: 1px solid #ccc;
+    box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.5);
     display: flex;
-  }
-  
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+    border-radius: 10px;
+    gap: 10px;
+    margin: 20px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+}
+
+.chart__container__bottom {
+    position: relative;
+    align-items: center;
+    justify-content: center;
+    width: 150vh;
+    height: 65vh;
+    background-color: #fff;
+    border: 1px solid #ccc;
+    box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.5);
+    border-radius: 10px;
+}
+
+.top__section {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+}
+
 .line__chart {
-    flex: 1;
-    padding: 20px;
+    width: 70vh;
+    height: 38vh;
 }
   
 .pie__chart {
-    flex: 1;
-    padding: 20px;
+    width: 60vh;
+    height: 35vh;
 }
+
+
 
 /* Style the section headers for the charts */
 .section__header {
@@ -296,20 +330,4 @@ html {
   font-size: 20px; /* Adjust the font size as needed */
   font-weight: bold; /* Make the text bold */
   text-align: center; /* Center the section header text */
-}
-
-/* Style the line chart canvas element */
-#rides__Chart {
-  max-width: 100%;
-  height: auto;
-  border: 1px solid #ccc;
-  border-radius: 5px;
-}
-
-/* Style the pie chart canvas element */
-#pie__Chart {
-  width: 100%;
-  max-height: 300px;
-  border: 1px solid #ccc;
-  border-radius: 5px;
 }
