--- a/css/styles.css
+++ b/css/styles.css
@@ -287,7 +287,6 @@ html {
     justify-content: flex-start;
     align-items: center;
     border-radius: 10px;
-    gap: 10px;
     margin: 20px;
     border: 1px solid #ccc;
     border-radius: 5px;
@@ -297,12 +296,13 @@ html {
     position: relative;
     align-items: center;
     justify-content: center;
-    width: 150vh;
+    width: 100vh;
     height: 65vh;
     background-color: #fff;
     border: 1px solid #ccc;
     box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.5);
     border-radius: 10px;
+    margin: 20px;
 }
 
 .top__section {
@@ -319,6 +319,11 @@ html {
 .pie__chart {
     width: 60vh;
     height: 35vh;
+}
+
+.weather__chart {
+    width: 140vh;
+    height: 38vh;
 }
 
 
