--- a/css/styles.css
+++ b/css/styles.css
@@ -32,6 +32,7 @@ body {
     margin: 0;
     margin-left: .5rem;
     color: #000;
+    white-space: nowrap;
 }
 
 /* Sidebar */
@@ -131,6 +132,7 @@ html {
     justify-content: flex-start;
     align-items: center;
     border-radius: 10px;
+    padding: 20px;
 }
 
 .table__title {
@@ -255,6 +257,7 @@ html {
     justify-content: flex-start;
     align-items: center;
     border-radius: 10px;
+    padding: 20px;
 }
 
 .map__title {
@@ -277,32 +280,25 @@ html {
 
 
 .chart__container {
-    width: 75vh;
+    width: 45%;
     height: 45vh;
     background-color: #fff;
     border: 1px solid #ccc;
     box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.5);
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    align-items: center;
     border-radius: 10px;
-    margin: 20px;
+    margin: 1vh;
     border: 1px solid #ccc;
     border-radius: 5px;
 }
 
 .chart__container__bottom {
-    position: relative;
-    align-items: center;
-    justify-content: center;
-    width: 100vh;
-    height: 65vh;
+    width: 91.5%;
+    height: 45vh;
     background-color: #fff;
     border: 1px solid #ccc;
     box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.5);
     border-radius: 10px;
-    margin: 20px;
+    margin: 10px;
 }
 
 .top__section {
@@ -312,27 +308,26 @@ html {
 }
 
 .line__chart {
-    width: 70vh;
-    height: 38vh;
+    width: 100%; /* Make the pie chart fill the container width */
+    height: 80%;
 }
   
 .pie__chart {
-    width: 60vh;
-    height: 35vh;
+    width: 100%; /* Make the pie chart fill the container width */
+    height: 80%;
 }
 
 .weather__chart {
-    width: 140vh;
-    height: 38vh;
+    width: 100%;
+    height: 80%;
 }
-
 
 
 /* Style the section headers for the charts */
 .section__header {
-  margin-bottom: 20px;
+  margin-bottom: 10px;
   color: #333;
-  font-size: 20px; /* Adjust the font size as needed */
+  font-size: 2vh; /* Adjust the font size as needed */
   font-weight: bold; /* Make the text bold */
   text-align: center; /* Center the section header text */
 }
